# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: python_CI.yml
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  url.html  urls.html
